[metadata]
name = indevproxy
version = 1.0.0
url = https://github.com/Kuruyia/IndevProxy
author = Kuruyia
description = A Proxy allowing you to play Minecraft Indev/Infdev again
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment
    Typing :: Typed

[options]
packages = indevproxy
python_requires = >= 3
install_requires =
    proxy.py
    requests

[options.entry_points]
console_scripts =
    indevproxy = indevproxy:main
